syntax = "proto3";

option java_package = "com.bxc.data";
option java_multiple_files = true;

import "gethelloworld.proto";

service DataService {
  rpc GetHelloWorldRpc(GetHelloWorldRequest) returns (GetHelloWorldResponse){
  }
}